[package]
name = "packet_crafter"
version = "0.2.0"
authors = ["Jordan Newman <jordankylenewman@gmail.com>"]
edition = "2018"

description = """
Simple tools for creating / parsing / manipulating data packets. Calculates checsums and length fields where possible.
"""

keywords = ["networking", "packet", "ip", "tcp", "udp"]
categories = ["network-programming"]
repository = "https://github.com/coldFireworks/packet_crafter"
license = "MIT"
readme = "README.md"

[dependencies]
add_getters_setters = "~1"